--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
+img {
+    border-radius: 25px;
+    width: 250px;
+    border: 3px solid rgb(0, 217, 255);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
 
+img:hover {
+    box-shadow: 0px 0px 12px rgb(255, 0, 242);
+    cursor: pointer;
+    transform: scale(1.01);
+}
+
+.movies-grid {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.movie-card {
+    margin: 10px;
+}
+
+body {
+    padding: 20px;
+}
+
+.movie-title {
+    max-width: 256px;
+    height: 20px;
+    overflow-y: scroll;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.movie-votes {
+    margin-bottom: 0;
+}
