--- a/style.css
+++ b/style.css
@@ -1,37 +1,182 @@
+
+
+
 img {
     border-radius: 25px;
     width: 250px;
-    border: 3px solid rgb(0, 217, 255);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    height: 400px;
+    border: 2px solid rgb(0, 217, 255);
+    transition: transform 0.15s ease, box-shadow 0.15s ease;
 }
 
 img:hover {
-    box-shadow: 0px 0px 12px rgb(255, 0, 242);
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
     cursor: pointer;
-    transform: scale(1.01);
+    transform: scale(1.05);
 }
 
 .movies-grid {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    background-color: rgba(28, 28, 28, 0.942);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 20px;
+    margin-top: 15px;
+    border: 2px solid rgb(0, 217, 255);
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+}
+
+#top {
+    margin-left: 15px;
+}
+
+.query-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    border-radius: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: rgb(178, 7, 7);
+    border: 2px solid rgb(0, 217, 255);
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 0px;
+    background-color: rgb(178, 7, 7);;
 }
 
 .movie-card {
-    margin: 10px;
+    margin: 5px;
 }
 
 body {
-    padding: 20px;
+    font-family: 'Noto Sans JP', sans-serif;
+    background-color: rgb(34, 34, 34);
+    color: white;
+    margin: 0;
+}
+
+#search-title {
+    font-size: 30px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+#currently-playing {
+    font-size: 30px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+}
+
+#currently-playing-underline {
+    margin-left: 15px;
 }
 
 .movie-title {
-    max-width: 256px;
-    height: 20px;
-    overflow-y: scroll;
+    width: 190px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    white-space: wrap;
+    overflow: scroll;
+    height: 58px;
+    font-size: 18px;
+}
+
+.movie-description {
+    display: flex;
+    justify-content: space-between;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+}
+
+#navbar {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+h4 {
+    margin: 0;
 }
 
 .movie-votes {
+    width: 50px;
     margin-bottom: 0;
+    margin-top: 0px;
+    height: 27px;
+    text-shadow: 0px 0px 3px rgb(186, 186, 186);
+}
+
+
+button {
+    cursor: pointer;
+    border-radius: 25px;
+    background-color: transparent;
+    border: none;
+    height: 30px;
+    padding-right: 20px;
+}
+
+input {
+    height: 50px;
+    font-size: 14px;
+    width: 400px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: none;
+    border-radius: 20px;
+    background-color: white;
+    color: black;
+}
+
+input:hover {
+    box-shadow: inset 0px 0px 6px rgb(186, 186, 186);
+    cursor: text;
+    
+}
+
+.icon {
+    color: rgb(0, 0, 0);
+}
+
+.icon:hover {
+    color:rgb(0, 217, 255);
+}
+
+input:focus {
+    box-shadow: inset 0px 0px 6px rgb(0, 217, 255);
+    outline: none;
+}
+
+.wrapper {
+    display:inline-block;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 15px;
+    border-radius: 20px;
+    border: 2px solid rgb(0, 217, 255);
+    height: 52px;
+   
 }
