--- a/style.css
+++ b/style.css
@@ -5,21 +5,35 @@ img {
     border-radius: 25px;
     width: 250px;
     height: 400px;
-    border: 2px solid rgb(0, 217, 255);
-    transition: transform 0.15s ease, box-shadow 0.15s ease;
+    border: 1.5px solid rgb(0, 217, 255);
+    transition: transform 0.15s ease, box-shadow 0.15s ease, border-radius 0.15s ease;
 }
 
 img:hover {
+    border-radius: 15px;
     box-shadow: 0px 0px 10px rgb(255, 255, 255);
     cursor: pointer;
     transform: scale(1.05);
+}
+
+.movie-backdrop {
+    width: 100%;
+    height: 260px;
+    border-radius: 0px;
+    border-color: transparent;
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+}
+
+.movie-backdrop:hover {
+    transform: scale(1.0);
+    border-radius: 0px;
+    cursor: default;
 }
 
 .movies-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     position: absolute;
     left: 0;
     right: 0;
@@ -29,7 +43,7 @@ img:hover {
     margin-bottom: 15px;
     background-color: rgba(28, 28, 28, 0.942);
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 55px;
     border-radius: 20px;
     margin-top: 15px;
     border: 2px solid rgb(0, 217, 255);
@@ -41,10 +55,9 @@ img:hover {
 }
 
 .query-grid {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -56,9 +69,70 @@ img:hover {
     padding-bottom: 15px;
     margin-left: 15px;
     margin-right: 15px;
-    background-color: rgb(178, 7, 7);
-    border: 2px solid rgb(0, 217, 255);
+    margin-top: 15px;
+    background-color: rgba(178, 7, 7, 0.865);
+    border: 1.5px solid rgb(0, 217, 255);
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
 }
+
+.movies-modal {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    z-index: 3;
+    background-color: rgba(178, 7, 7, 0.865);
+    box-sizing: border-box;
+}
+
+.movies-modal-inner {
+    width: 35%;
+    background-color: rgba(28, 28, 28, 0.942);
+    padding: 25px;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    border-radius: 20px;
+    border: 1.5px solid rgb(0, 217, 255);
+    max-height: 80vh;
+    overflow: auto;
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+}
+
+.modal-movie-image {
+    margin-left: 230px;
+    width: 340px;
+    height: 400px;
+}
+
+
+.modal-movie-title {
+    display: flex;
+    justify-content: space-between;
+    overflow-y: scroll;
+    font-size: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.modal-movie-votes, .modal-movie-details {
+    margin-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.modal-movie-votes {
+    font-size: 25px;
+}
+
+
 
 .search {
     display: flex;
@@ -66,7 +140,8 @@ img:hover {
     align-items: center;
     flex-direction: column;
     margin-bottom: 0px;
-    background-color: rgb(178, 7, 7);;
+    background: rgb(178,7,7);
+    background: linear-gradient(180deg, rgba(178,7,7,1) 0%, rgba(218,33,33,1) 50%, rgba(178,7,7,1) 100%); 
 }
 
 .movie-card {
@@ -110,7 +185,22 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+}
+
+#footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    
 }
 
 #navbar {
@@ -130,6 +220,89 @@ h4 {
     text-shadow: 0px 0px 3px rgb(186, 186, 186);
 }
 
+#load-more-movies-btn {
+    background-color: transparent;
+    height: 52px;
+    width: 600px;
+    padding-left: 15px;
+    border-radius: 20px;
+    padding-right: 15px;
+    font-weight: bold;
+    color: white;
+    border: 1px solid rgb(0, 217, 255);
+}
+
+#extend-search-page {
+    background-color: transparent;
+    height: 52px;
+    width: 600px;
+    padding-left: 15px;
+    border-radius: 20px;
+    padding-right: 15px;
+    font-weight: bold;
+    color: white;
+    border: 1px solid rgb(0, 217, 255);
+}
+
+#close-search-btn {
+    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    height: 52px;
+    width: 60px;
+    margin-top: 10px;
+    margin-right: 15px;
+    padding-left: 5px;
+    border-radius: 20px;
+    padding-right: 5px;
+    font-weight: bold;
+    color: white;
+    border: 1px solid rgb(0, 217, 255);
+}
+
+.modal-close-button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    margin: 0px;
+    height: 52px;
+    width: 60px;
+    margin-left: 25px;
+    padding-left: 5px;
+    margin-top: 10px;
+    padding-right: 5px;
+    border-radius: 20px;
+    font-weight: bold;
+    color: white;
+    border: 1px solid rgb(0, 217, 255);
+}
+
+.movie-tagline {
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 15px;
+}
+
+#homebutton {
+    text-decoration: none;
+    color: white;
+}
+
+#load-more-movies-btn:hover, #extend-search-page:hover, #close-search-btn:hover, .modal-close-button:hover {
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+}
+
+.fa-angle-down {
+    margin-top: 12px;
+}
+
+.fa-solid {
+    color: white;
+  }
 
 button {
     cursor: pointer;
@@ -137,23 +310,35 @@ button {
     background-color: transparent;
     border: none;
     height: 30px;
-    padding-right: 20px;
+}
+
+#search-button {
+    padding-right: 10px;
+    padding-left: 8px;
+    
+}
+
+.below-search-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 input {
-    height: 50px;
-    font-size: 14px;
-    width: 400px;
+    height: 70px;
+    font-size: 32px;
+    max-width: 530px;
     padding-left: 20px;
     padding-right: 20px;
     border: none;
     border-radius: 20px;
     background-color: white;
     color: black;
+    text-align: center;
 }
 
 input:hover {
-    box-shadow: inset 0px 0px 6px rgb(186, 186, 186);
+    box-shadow: 0px 0px 6px rgb(186, 186, 186);
     cursor: text;
     
 }
@@ -167,16 +352,24 @@ input:hover {
 }
 
 input:focus {
-    box-shadow: inset 0px 0px 6px rgb(0, 217, 255);
+    box-shadow: 0px 0px 6px rgb(0, 217, 255);
     outline: none;
 }
 
+input::placeholder {
+    font-size: 17px;
+    text-align: left;
+  }
+
 .wrapper {
-    display:inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 530px;
     background-color: rgb(255, 255, 255);
     margin-bottom: 15px;
     border-radius: 20px;
-    border: 2px solid rgb(0, 217, 255);
-    height: 52px;
+    border: 1px solid rgb(0, 217, 255);
+    height: 72px;
    
 }
