--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ img:hover {
     background-color: rgba(28, 28, 28, 0.942);
     padding-top: 15px;
     padding-bottom: 55px;
-    border-radius: 20px;
+    border-radius: 25px;
     margin-top: 15px;
     border: 2px solid rgb(0, 217, 255);
     box-shadow: 0px 0px 10px rgb(255, 255, 255);
@@ -334,9 +334,9 @@ button {
 }
 
 input {
-    height: 70px;
+    height: 52px;
     font-size: 32px;
-    max-width: 530px;
+    width: 600px;
     padding-left: 20px;
     padding-right: 20px;
     border: none;
@@ -374,11 +374,11 @@ input::placeholder {
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 530px;
+    width: 600px;
     background-color: rgb(255, 255, 255);
     margin-bottom: 15px;
     border-radius: 20px;
     border: 1px solid rgb(0, 217, 255);
-    height: 72px;
+    height: 54px;
    
 }
